tests/language_modules/09_statements/invalid_semantics/case_branch_type_mismatch.vf
module CaseBranchTypeMismatch

procedure main()
is
    let choice: Integer = 1
    case choice is
        when true =>
            check true
        default =>
            check true
    end case
end main

end CaseBranchTypeMismatch